# llmops-api

./: .codegeexignore  .gitignore  Dockerfile  Makefile  pyproject.toml  pytest.ini  requirements.txt
app/http/: __init__.py  app.py  module.py
config/: __init__.py  config.py  default_config.py  swagger_config.py
docker/: entrypoint.sh
docs/: common_definitions.yaml  components.yaml
docs/account_handler/: bind_email.yaml  bind_phone_number.yaml  get_current_user.yaml  get_points_by_account_id.yaml  get_points_by_date_range.yaml  is_email_bound.yaml  is_phone_number_bound.yaml  unbind_oauth_provider.yaml  update_avatar.yaml  update_name.yaml  update_password.yaml
docs/ai_handler/: generate_conversation_name.yaml  generate_suggested_questions.yaml  optimize_prompt.yaml
docs/analysis_handler/: get_app_analysis.yaml
docs/api_key_handler/: chat.yaml  create_api_key.yaml  delete_api_key.yaml  get_api_keys_with_page.yaml  update_api_key.yaml  update_api_key_is_active.yaml
docs/api_tool_handler/: create_api_tool.yaml  create_api_tool_provider.yaml  delete_api_tool_provider.yaml  get_api_tool.yaml  get_api_tool_provider.yaml  get_api_tool_providers_with_page.yaml  update_api_tool_provider.yaml  validate_openapi_schema.yaml
docs/app_handler/: cancel_publish.yaml  copy_app.yaml  create_app.yaml  debug.yaml  debug_chat.yaml  delete_app.yaml  delete_debug_conversation_summary.yaml  delete_debug_conversations.yaml  delete_message_by_id.yaml  fallback_history_to_draft.yaml  generate_share_conversation.yaml  get_app.yaml  get_apps_with_page.yaml  get_debug_conversation_messages_with_page.yaml  get_debug_conversation_summary.yaml  get_draft_app_config.yaml  get_publish_histories_with_page.yaml  get_published_config.yaml  get_share_conversation.yaml  publish.yaml  regenerate_web_app_token.yaml  stop_debug_chat.yaml  update_app.yaml  update_debug_conversation_summary.yaml  update_draft_app_config.yaml
docs/assistant_agent_handler/: assistant_agent_chat.yaml  delete_assistant_agent_conversation.yaml  delete_assistant_message_by_id.yaml  get_assistant_agent_messages_with_page.yaml  stop_assistant_agent_chat.yaml
docs/audio_handler/: audio_to_text.yaml  message_to_audio.yaml  text_to_audio.yaml
docs/builtin_app_handler/: add_builtin_app_to_space.yaml  get_builtin_app_categories.yaml  get_builtin_apps.yaml
docs/builtin_tool_handler/: get_builtin_tools.yaml  get_categories.yaml  get_provider_icon.yaml  get_provider_tool.yaml
docs/conversation_handler/: delete_conversation.yaml  delete_message.yaml  get_conversation_messages_with_page.yaml  get_conversation_name.yaml  update_conversation_is_pinned.yaml  update_conversation_name.yaml
docs/dataset_handler/: create_dataset.yaml  create_documents.yaml  delete_dataset.yaml  delete_document.yaml  embeddings_query.yaml  get_dataset.yaml  get_dataset_queries.yaml  get_datasets_with_page.yaml  get_document.yaml  get_documents_status.yaml  get_documents_with_page.yaml  hit.yaml  update_dataset.yaml  update_document_enabled.yaml  update_document_name.yaml
docs/llm_model_handler/: get_llm_model.yaml  get_llm_model_icon.yaml  get_llm_models.yaml
docs/oauth_handler/: auth_login_create.yaml  authorize.yaml  get_wx_qrcode_url.yaml  logout.yaml  logout_all.yaml  password_bind_account.yaml  password_login.yaml  phone_number_bind_account.yaml  phone_number_login.yaml  provider.yaml  send_mail_code.yaml  send_sms_code.yaml  wx_login.yaml
docs/segment_handler/: create_segment.yaml  delete_segment.yaml  get_segment.yaml  get_segments_with_page.yaml  update_segment.yaml  update_segment_enabled.yaml
docs/upload_file_handler/: upload_file.yaml  (+1 more)
pkg/: __init__.py
storage/: faiss_local_data.py
test/: http-client.env.json  requests.http
tests/: conftest.py  requests.http
(+319 files in other folders)
