[project]
name = "llmops-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "injector>=0.22.0",
    "langchain[openai]>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "openai>=1.106.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.2",
    "flasgger>=0.9.7.1",
    "flask-cors>=6.0.1",
]

[tool.rye.scripts]
pipreqs = { cmd = "pipreqs --ignore .venv --force" }
migrate = { cmd = "flask --app app.http.app db migrate" }
upgrade = { cmd = "flask --app app.http.app db upgrade" }
downgrade = { cmd = "flask --app app.http.app db downgrade" }

[tool.ruff]
lint.extend-select = ["ALL"]
ignore = [
    "T201",
    "RUF001",
    "RUF002",
    "RUF003",
    "D100",
    "D101",
    "D102",
    "D104",
    "D106",
    "D107",
    "D400",
    "D415",
    "ERA001",
    "C901",
    "ANN001",
    "ANN401",
]
