[project]
name = "llmops-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "injector>=0.22.0",
    "langchain[openai]>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "openai>=1.106.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.2",
    "flasgger>=0.9.7.1",
    "flask-cors>=6.0.1",
    "langchain-huggingface>=0.3.1",
    "sentence-transformers>=5.1.1",
    "langchain-weaviate>=0.0.5",
    "unstructured>=0.18.15",
    "markdown>=3.9",
    "marshmallow>=3.26.1",
    "pydash>=8.0.5",
    "cos-python-sdk-v5>=1.9.38",
    "redis>=7.0.1",
    "celery>=5.5.3",
    "jieba>=0.42.1",
    "pypdf>=6.1.3",
    "pdfminer-six==20240706",
    "pi-heif>=1.1.1",
    "unstructured-inference>=1.1.2",
    "pdf2image>=1.17.0",
    "unstructured-pytesseract>=0.3.15",
    "pyjwt>=2.10.1",
    "flask-login>=0.6.3",
    "email-validator>=2.3.0",
    "jinja2>=3.1.6",
    "langchain-ollama>=1.0.1",
    "dashscope>=1.25.8",
]

[tool.rye.scripts]
pipreqs = { cmd = "pipreqs --ignore .venv --force" }
migrate = { cmd = "flask --app app.http.app db migrate" }
upgrade = { cmd = "flask --app app.http.app db upgrade" }
downgrade = { cmd = "flask --app app.http.app db downgrade" }

[tool.ruff]
lint.extend-select = ["ALL"]
ignore = [
    "T201",
    "RUF001",
    "RUF002",
    "RUF003",
    "D100",
    "D101",
    "D102",
    "D104",
    "D106",
    "D107",
    "D400",
    "D415",
    "ERA001",
    "C901",
    "A001",
    "ANN001",
    "ANN401",
    "ARG001",
    "ARG002",
    "S101",
    "S105",
    "TD002",
    "TD003",
    "FIX002",
    "PLC0415",
]
